<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeLike</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="title_section1">" Timeline"</string>
    <string name="title_section2">" Popular"</string>
    <string name="title_section3">" New post"</string>
    <string name="title_section4">" Nearby"</string>
    <string name="title_section5">"  Profile"</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_post">New Post</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_welcome">WeLike</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="button_send">Send</string>
    <string name="button_like">Like</string>
    <string name="button_comment">Comment</string>
    <string name="button_likes">Likes</string>
    <string name="title_activity_likes">LikesActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="search_users">Search users</string>
    <string name="logout">Logout</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_followers">Followers</string>
    <string name="title_activity_following">Following</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="fullname">Full name</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="web_address">Web address</string>
    <string name="map_hint">Long press on map to place pin</string>
    <string name="select_photo">Select photo</string>
    <string name="no_items">There is no items found</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>

</resources>
