<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditProfileActivity" 
    android:background="@android:color/white" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relativeLayoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageViewProfileUserImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar_empty" />

                <ImageView
                    android:id="@+id/imageViewUserAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="imageViewEditProfileOnClick"
                    android:src="@drawable/avatar_overlay" />

            </RelativeLayout>

            <EditText
                android:id="@+id/editTextEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextEditFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:id="@+id/linearLayoutCompany"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/editTextCompanyPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/editTextCompanyWeb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/web_address"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/map_hint"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>